<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="Typos">Tiny Tiny Feed</string>
    <string name="setupUrlLabel">tt-rss url:</string>
    <string name="setupUserLabel">tt-rss Login:</string>
    <string name="setupPasswordLabel">tt-rss Password:</string>
    <string name="setupRetrieveOnlyUnread">Retrieve only unread article</string>
    <string name="httpAuthUserLabel">Login:</string>
    <string name="httpAuthPasswordLabel">Password:</string>
    <string name="badLogin">Please check your login/password</string>
    <string name="setupNumArticles">Number of articles to retrieve</string>
    <string name="emptyWidgetListTest">Feed list is empty</string>
    <string name="setupCheckButtonText">Check</string>
    <string name="defaultLastUpdateText">Never updated</string>
    <string name="lastUpdateText">Last update: %s</string>
    <string name="unreadSymbol" translatable="false">[*]</string>
    <string name="connectionError">Connection issue - Check if the server is online and if the url is the good one</string>
    <string name="connectionAuthError">HTTP auth - Please check your credentials</string>
    <string name="noInternetConnection">No Internet connection available right now</string>
    <string name="setupApiDisabled">The API seems to be disabled, please enable them on the tt-rss preferences.</string>
    <string name="preference_activity_title" tools:ignore="Typos">Tiny Tiny Feed - Setup</string>
    <string name="preference_category_ttrss_settings">tt-rss settings</string>
    <string name="preference_category_ssl_settings">SSL settings</string>
    <string name="preference_category_http_auth_settings">HTTP Authentification (optional)</string>
    <string name="preference_ttrss_url_summary">The URL of your tt-rss server (i.e. http://tt-rss.example.org without /api/ at the end)</string>
    <string name="preference_ttrss_user_summary">Username to connect on tt-rss</string>
    <string name="preference_ttrss_password_summary">Password to connect on tt-rss</string>
    <string name="preference_ssl_acccept_self_signed_certificate">Accept all certificates</string>
    <string name="preference_ssl_acccept_self_signed_certificate_summary">Do not validate certificates</string>
    <string name="preference_ssl_check_hostname">Allow unmatching hostnames</string>
    <string name="preference_ssl_check_hostname_summary">Do not check if hostnames are matching</string>
    <string name="preference_httpauth_user_summary">Fill this if your tt-rss setup is protected by an HTTP Authentification</string>
    <string name="preference_httpauth_password_summary">Your HTTP Authentification password</string>
    <string name="preference_article_excerpt_lenght">Excerpt length</string>
    <string name="preference_article_excerpt_lenght_summary">Number of characters to retrieve for the excerpt</string>
    <string name="preference_article_number_summary">The number of article you wish to retrieve</string>
    <string name="preference_ttrss_url_default_value" translatable="false">http://</string>
    <string name="preference_ttrss_url_not_null_or_default">Please enter a valid url</string>
    <string name="preference_unread_only_summary">Check this if you want to retrieve only the unread articles</string>
    <string name="preference_background_color_title">Backgroung color</string>
    <string name="preference_background_color_summary">Color of the background of the widget</string>
    <string name="preference_text_color_title">Text color</string>
    <string name="preference_text_color_summary">Color of the article\'s text</string>
    <string name="preference_text_size_title">Text size</string>
    <string name="preference_text_size_summary">Size of the article\'s text</string>
    <string name="preference_title_size_title">Title size</string>
    <string name="preference_title_size_summary">Size of the article\'s title</string>
    <string name="preference_title_color_title">Title color</string>
    <string name="preference_title_color_summary">Color of the article\'s title</string>
    <string name="preference_source_size_title">Source size</string>
    <string name="preference_source_size_summary">Size of the article\'s source</string>
    <string name="preference_source_color_title">Source color</string>
    <string name="preference_source_color_summary">Color of the article\'s source</string>
    <string name="preference_status_color_title">Status bar color</string>
    <string name="preference_status_color_summary">Color of the status bar</string>
    <string name="preference_force_update_title">Force update on server</string>
    <string name="preference_force_update_summary">Force tt-rss server to update feeds</string>
    <string name="widget_no_setup">Please tap here to configure your widget</string>
    <string name="ssl_exception_message">SSL problem: please check your settings</string>
    <string name="widget_refresh">Refresh</string>
    <string name="nullArticle">Unable to get the article URL</string>
    <string name="widget_update_text">Updating…</string>
    <string name="widget_configuration_title">Widgets configuration</string>
    <string name="widget_categories_title">Categories</string>
    <string name="widget_categories_summary">Categories to display for the widget</string>
    <string name="widget_preference_title">Configuration of the widget %s</string>
    <string name="widget_name_title">Name</string>
    <string name="widget_name_summary">Widget\'s name</string>
    <string name="preference_validate_button">OK</string>
    <string name="preference_loading_categories">Loading categories…</string>
    <string name="preference_cant_load_categories">Could not load categories!</string>

</resources>
