<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_ttrss_settings">
        <org.poopeeland.tinytinyfeed.interfaces.TrimmedEditTextPreference
            android:defaultValue="@string/preference_ttrss_url_default_value"
            android:inputType="textUri"
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_URL"
            android:summary="@string/preference_ttrss_url_summary"
            android:title="@string/setupUrlLabel" />
        <org.poopeeland.tinytinyfeed.interfaces.TrimmedEditTextPreference
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_USER"
            android:summary="@string/preference_ttrss_user_summary"
            android:title="@string/setupUserLabel" />
        <org.poopeeland.tinytinyfeed.interfaces.TrimmedEditTextPreference
            android:inputType="textPassword"
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_PASSWORD"
            android:summary="@string/preference_ttrss_password_summary"
            android:title="@string/setupPasswordLabel" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_ssl_settings">
        <CheckBoxPreference
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_SSL_SELF"
            android:summary="@string/preference_ssl_acccept_self_signed_certificate_summary"
            android:title="@string/preference_ssl_acccept_self_signed_certificate"/>
        <CheckBoxPreference
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_SSL_HOSTNAME"
            android:summary="@string/preference_ssl_check_hostname"
            android:title="@string/preference_ssl_check_hostname_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_http_auth_settings">
        <org.poopeeland.tinytinyfeed.interfaces.TrimmedEditTextPreference
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_HTTP_USER"
            android:summary="@string/preference_httpauth_user_summary"
            android:title="@string/httpAuthUserLabel" />
        <org.poopeeland.tinytinyfeed.interfaces.TrimmedEditTextPreference
            android:inputType="textPassword"
            android:key="org.poopeeland.tinytinyfeed.PREFERENCE_HTTP_PASSWORD"
            android:summary="@string/preference_httpauth_password_summary"
            android:title="@string/httpAuthPasswordLabel" />
    </PreferenceCategory>

</PreferenceScreen>