<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="start|center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupUrlLabel"
        android:id="@+id/textView"
        android:layout_gravity="start|center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setupUrl"
        android:layout_gravity="start|center_vertical"
        android:inputType="textUri" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupUserLabel"
        android:id="@+id/textView2"
        android:layout_gravity="start|center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setupUser"
        android:layout_gravity="start|center_vertical"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupPasswordLabel"
        android:id="@+id/textView3"
        android:layout_gravity="start|center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/setupPassword"
        android:layout_gravity="start|center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setupNumArticles"
        android:id="@+id/textView4"
        android:layout_gravity="start|center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/setupArticlesNum"
        android:layout_gravity="start|center_vertical" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setupRetrieveOnlyUnread"
        android:id="@+id/setupOnlyUnread" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/httpAuthHeader"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/httpAuthUserLabel"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/setupHttpUser"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/httpAuthPasswordLabel"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/setupHttpPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarStyle"
        android:gravity="bottom|end"
        android:weightSum="1">

        <Button
            android:layout_height="wrap_content"
            android:text="@string/setupOkButtonText"
            android:id="@+id/setupOkButton"
            android:enabled="false"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_weight="146" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/setupCheckButtonText"
            android:id="@+id/setupCheckButton"
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_weight="139" />
    </LinearLayout>

</LinearLayout>
