<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:padding="@dimen/widget_margin"
    android:id="@+id/widgetLayoutId">

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listViewWidget"
        android:layout_gravity="start|top"
        android:clickable="true"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="true"
        android:layout_above="@+id/lastUpdateText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyWidgetListTest"
        android:id="@+id/widgetEmptyList"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultLastUpdateText"
        android:id="@+id/lastUpdateText"
        android:textStyle="bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/refreshButton"
        android:layout_toStartOf="@+id/refreshButton" />

    <Button
        android:text="@string/widget_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refreshButton"
        android:layout_alignBottom="@+id/lastUpdateText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>